# Self-Healing-VIO-for-Robust-UAV-Navigation

./: .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  README_EL.md  RESEARCH_FRAMEWORK.md.  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt  run_orbslam3_euroc.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
assets/: README.md
assets/readme/: README.md  visual_manifest.json
benchmarks/: README.md
configs/: default.yaml  orbslam3_euroc.yaml  synthetic_degradation.yaml  synthetic_nominal.yaml
datasets/: README.md
docs/: DATASETS.md  EVALUATION_PROTOCOL.md  EXPERIMENTS.md  MATHEMATICAL_FORMULATION.md  OPENVINS_INTEGRATION_PLAN.md  PHD_PROPOSAL.md  PINNED_README_EVIDENCE.md  README_VISUALS.md  REPRODUCIBILITY.md  REPRODUCIBILITY_CHECKLIST.md  RESEARCH_FRAMEWORK.md  RESEARCH_IMPLEMENTATION_STATUS.md  RESEARCH_OVERVIEW.md  RESEARCH_ROADMAP.md  ROADMAP.md  SYNTHETIC_DEMO_AUDIT.md  SYSTEM_ARCHITECTURE.md  V4RL_ALIGNMENT.md  VISUAL_RESEARCH_GUIDE.md
experiments/: README.md
launch/: health_monitor.launch.py
paper/: abstract.md  contributions.md  future_work.md
results/: README.md
ros2_interfaces/: README.md
ros2_interfaces/msg/: DiagnosisPosterior.msg  HealthVector.msg  RecoveryAction.msg
scripts/: __init__.py  demo_health_monitor.py  evaluate_experiment.py  generate_readme_evidence.py  make_demo_gif.py  run_all.py  run_benchmark.py  run_scenario_suite.py  run_synthetic_demo.py  run_synthetic_experiment.py
shield_vio/: __init__.py
shield_vio/calibration_metrics/: metrics.py
shield_vio/core/: __init__.py  math.py  models.py
src/: run_orbslam3_euroc.py
tests/: test_calibration_and_datasets.py  test_controller.py  test_core.py  test_core_api.py  test_degradation_and_closed_loop.py  test_detectors.py  test_euroc_dataset.py  test_failure_prediction.py  test_fault_injection.py  test_health.py  test_health_diagnosis_recovery.py  test_openvins_adapter.py  test_orbslam3_runner.py  test_orbslam3_trajectory.py  test_readme_evidence.py  test_recovery_policy.py  test_research_core.py  test_scenario_evaluation.py  test_synthetic_demo_pipeline.py  test_synthetic_experiment.py  test_temporal_buffer.py  test_temporal_filter.py
website/: README.md
(+59 files in other folders)
