[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shield-vio"
version = "0.1.0"
description = "Self-healing degradation-aware visual-inertial odometry research prototype"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Panagiota Grosdouli" }
]
dependencies = [
  "numpy>=1.23"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pyyaml>=6.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
