[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shield-vio"
version = "0.1.0"
description = "Safety-aware visual-inertial odometry research toolkit."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Panagiota Grosdouli"}]
license = {text = "MIT"}
dependencies = ["numpy>=1.24", "matplotlib>=3.7", "PyYAML>=6.0", "Pillow>=10.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5", "black>=24.0", "pre-commit>=3.7"]

[tool.setuptools.packages.find]
include = ["shield_vio*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Keep CI focused on correctness-critical Python errors for the initial
# research scaffold. Formatting/import modernization can be tightened in a
# later cleanup without blocking functional validation.
select = ["F"]
