[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shield-vio"
version = "0.2.0"
description = "Safety-aware visual-inertial odometry research toolkit."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Panagiota Grosdouli"}]
license = {text = "MIT"}
dependencies = ["numpy>=1.24", "matplotlib>=3.7", "PyYAML>=6.0", "Pillow>=10.0", "opencv-python-headless>=4.8"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.5", "black>=24.0", "pre-commit>=3.7"]

[tool.setuptools.packages.find]
include = ["shield_vio*", "scripts*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F"]
